update image profile

--- a/index.html
+++ b/index.html
@@ -26,6 +26,13 @@
                 text-decoration: underline;
                 cursor: pointer;
             }
+            .programmer {
+                transition: .5s;
+            }
+            .programmer:hover {
+                transform: rotate(-15deg) scale(1.4) translateY(-3px);
+                cursor: pointer;
+            }
             .programmer svg {
                 height: 100px;
             }
@@ -39,7 +46,6 @@
                 margin-top: -60px;
                 padding-top: 100px;
             }
-
         </style>
     </head>
     <body class="bg-dark">
@@ -107,9 +113,7 @@
         </div>
 
         <div class="container mt--59">
-            <div
-                class="row full-height text-center justify-content-md-center align-content-start bg-info"
-            >
+            <div class="row full-height text-center justify-content-md-center align-content-start bg-info">
                 <h1 class="h3 h-auto">
                     Hi, I'm <span class="bagas">Bagas Ghufron Alfaiz</span>
                 </h1>
@@ -204,8 +208,8 @@
                 </div>
             </div>
 
-            <div class="row full-height align-content-start bg-warning"></div>
-            <div class="row full-height align-content-start bg-success"></div>
+            <div class="row full-height text-center justify-content-md-center align-content-start bg-warning"></div>
+            <div class="row full-height text-center justify-content-md-center align-content-start bg-success"></div>
 
         </div>
 
